--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "zustand": "^4.4.7"
   },
