--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "axios": "^1.6.7",
     "date-fns": "^3.3.0",
     "esbuild": "^0.19.11",
     "moment": "^2.30.1",
