--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://keepgoinglikelion.github.io/meringue-FE/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base=/meringue-FE",
